--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -124,8 +124,8 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 36px;
-  height: 36px;
+  width: 100%;
+  height: auto;
 
   @include breakpoint($large) {
     display: block;
@@ -134,8 +134,7 @@
   }
 
   img {
-    max-width: 110px;
-    border-radius: 50%;
+    border-radius: 15%;
 
     @include breakpoint($large) {
       padding: 5px;
@@ -147,8 +146,8 @@
 .author__content {
   display: table-cell;
   vertical-align: top;
-  padding-left: 15px;
-  padding-right: 25px;
+  padding-left: 20px;
+  // padding-right: 25px;
   line-height: 1;
 
   @include breakpoint($large) {
@@ -166,6 +165,7 @@
 
 .author__name {
   margin: 0;
+  padding-left: 10px;
 
   @include breakpoint($large) {
     margin-top: 10px;
@@ -179,6 +179,7 @@
 
 .author__bio {
   margin: 0;
+  padding-left: 10px;
 
   @include breakpoint($large) {
     margin-top: 10px;
@@ -187,6 +188,7 @@
 }
 
 .author__urls-wrapper {
+  padding-left: 10px;
   position: relative;
   display: table-cell;
   vertical-align: middle;
@@ -216,7 +218,7 @@
 
     &:before {
       @supports (pointer-events: none) {
-        content: '';
+        content: "";
         position: fixed;
         top: 0;
         left: 0;
@@ -350,4 +352,3 @@
     margin-right: initial;
   }
 }
-
