--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -5,26 +5,34 @@ layout: archive
 {{ content }}
 
 <ul class="taxonomy__index">
-  {% assign postsInYear = site.posts | where_exp: "item", "item.hidden != true" | group_by_exp: 'post', 'post.date | date: "%Y"' %}
-  {% for year in postsInYear %}
-    <li>
-      <a href="#{{ year.name }}">
-        <strong>{{ year.name }}</strong> <span class="taxonomy__count">{{ year.items | size }}</span>
-      </a>
-    </li>
+  {% assign postsInYear = site.posts | where_exp: "item", "item.hidden != true"
+  | group_by_exp: 'post', 'post.date | date: "%Y"' %} {% for year in postsInYear
+  %}
+  <li>
+    <a href="#{{ year.name }}">
+      <strong>{{ year.name }}</strong>
+      <span class="taxonomy__count">{{ year.items | size }}</span>
+    </a>
+  </li>
   {% endfor %}
 </ul>
 
-{% assign entries_layout = page.entries_layout | default: 'list' %}
-{% assign postsByYear = site.posts | where_exp: "item", "item.hidden != true" | group_by_exp: 'post', 'post.date | date: "%Y"' %}
-{% for year in postsByYear %}
-  <section id="{{ year.name }}" class="taxonomy__section">
-    <h2 class="archive__subtitle">{{ year.name }}</h2>
-    <div class="entries-{{ entries_layout }}">
-      {% for post in year.items %}
-        {% include archive-single.html type=entries_layout %}
-      {% endfor %}
+{% assign entries_layout = page.entries_layout | default: 'list' %} {% assign
+postsByYear = site.posts | where_exp: "item", "item.hidden != true" |
+group_by_exp: 'post', 'post.date | date: "%Y"' %} {% for year in postsByYear %}
+<section id="{{ year.name }}" class="taxonomy__section">
+  <h2 class="archive__subtitle">{{ year.name }}</h2>
+  <div class="entries-{{ entries_layout }}">
+    {% for post in year.items %} {% include archive-single.html
+    type=entries_layout %} {% endfor %}
+    <div class="notice--success">
+      혹시나 잘못된 개념 전달이 있다면 댓글 부탁드립니다. 저의 성장에 큰 도움이
+      됩니다
     </div>
-    <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
-  </section>
+  </div>
+  <a href="#page-title" class="back-to-top"
+    >{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }}
+    &uarr;</a
+  >
+</section>
 {% endfor %}
