--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -11,6 +11,7 @@ null %} {% assign breadcrumbs_enabled = page.breadcrumbs %} {% endif %}
 <div id="main" role="main">
   {% include sidebar.html %}
   <article
+    id="contents-single"
     class="page h-entry"
     itemscope
     itemtype="https://schema.org/CreativeWork"
@@ -75,6 +76,32 @@ null %} {% assign breadcrumbs_enabled = page.breadcrumbs %} {% endif %}
 
     {% if jekyll.environment == 'production' and site.comments.provider and
     page.comments %} {% include comments.html %} {% endif %}
+
+    {% comment %}<!-- only show related on a post page when `related: true` -->{%
+      endcomment %} {% if page.id and page.related and site.related_posts.size > 0
+      %}
+      <div class="page__related">
+        <h2 class="page__related-title">
+          {{ site.data.ui-text[site.locale].related_label | default: "You May Also
+          Enjoy" }}
+        </h2>
+        <div class="grid__wrapper">
+          {% for post in site.related_posts limit:4 %} {% include
+          archive-single.html type="grid" %} {% endfor %}
+        </div>
+      </div>
+      {% comment %}<!-- otherwise show recent posts if no related when `related: true` -->{%
+      endcomment %} {% elsif page.id and page.related %}
+      <div class="page__related">
+        <h2 class="page__related-title">
+          {{ site.data.ui-text[site.locale].related_label | default: "You May Also
+          Enjoy" }}
+        </h2>
+        <div class="grid__wrapper">
+          {% for post in site.posts limit:4 %} {% if post.id == page.id %} {%
+          continue %} {% endif %} {% include archive-single.html type="grid" %} {%
+          endfor %}
+        </div>
   </article>
 
   {% if page.toc %}
@@ -91,31 +118,9 @@ null %} {% assign breadcrumbs_enabled = page.breadcrumbs %} {% endif %}
       class="toc__menu" skip_no_ids=true %}
     </nav>
   </aside>
-  {% endif %} {% comment %}<!-- only show related on a post page when `related: true` -->{%
-  endcomment %} {% if page.id and page.related and site.related_posts.size > 0
-  %}
-  <div class="page__related">
-    <h2 class="page__related-title">
-      {{ site.data.ui-text[site.locale].related_label | default: "You May Also
-      Enjoy" }}
-    </h2>
-    <div class="grid__wrapper">
-      {% for post in site.related_posts limit:4 %} {% include
-      archive-single.html type="grid" %} {% endfor %}
-    </div>
-  </div>
-  {% comment %}<!-- otherwise show recent posts if no related when `related: true` -->{%
-  endcomment %} {% elsif page.id and page.related %}
-  <div class="page__related">
-    <h2 class="page__related-title">
-      {{ site.data.ui-text[site.locale].related_label | default: "You May Also
-      Enjoy" }}
-    </h2>
-    <div class="grid__wrapper">
-      {% for post in site.posts limit:4 %} {% if post.id == page.id %} {%
-      continue %} {% endif %} {% include archive-single.html type="grid" %} {%
-      endfor %}
-    </div>
+  {% endif %} 
+  
+
   </div>
   {% endif %}
 </div>
