--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -14,8 +14,8 @@ $indent-var: 1.3em !default;
 
 /* system typefaces */
 $serif: Georgia, Times, serif !default;
-$sans-serif: -apple-system, BlinkMacSystemFont, "Gowun Batang","Roboto", "Segoe UI",
-  "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
+$sans-serif: -apple-system, BlinkMacSystemFont, "Gowun Batang", "Roboto",
+  "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
 $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
 
 /* sans serif typefaces */
@@ -155,10 +155,9 @@ $max-width: $x-large !default;
    Grid
    ========================================================================== */
 
-
-   $right-sidebar-width-narrow: 100px !default;    // default 200px
-   $right-sidebar-width: 200px !default;           // default 300px
-   $right-sidebar-width-wide: 250px !default;      // default 400px
+$sidebar-width-narrow: 100px !default; // default 200px
+$sidebar-width: 200px !default; // default 300px
+$sidebar-width-wide: 250px !default; // default 400px
 
 /*
    Other
@@ -172,5 +171,3 @@ $navicon-width: 1.5rem !default;
 $navicon-height: 0.25rem !default;
 $global-transition: all 0.2s ease-in-out !default;
 $intro-transition: intro 0.3s both !default;
-
-
